--- a/basic.html
+++ b/basic.html
@@ -221,7 +221,7 @@
     </div>
 </div>
 
-<script src="../dist/index.js"></script>
+<script src="index.js"></script>
 
 <script>
     function setupColourPicker(whiteboard) {
